<?xml version="1.0"?>
<package format="3">

  <name>bot_navigation</name>
  <version>0.0.0</version>
  <description>bot navigation_package</description>
  <maintainer email="matsumoto@irvs.ait.kyushu-u.ac.jp">Matsumoto</maintainer>
  <license>TODO</license>

  <!--<buildtool_depend>catkin</buildtool_depend>-->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>turtle_sim</build_depend>
  <build_depend>urg_node</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>python-numpy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python-numpy</run_depend>
  -->

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
